# llmtrim-envfeature

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HERMES.md  INSTALL.md  README.md  SECURITY.md  build.rs  codecov.yml  deny.toml  release.toml  taplo.toml
.config/: nextest.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-gate.yml  ci.yml  dco.yml  tray.yml  (+3 more)
Formula/: llmtrim.rb
bench/: README.md
crates/adapters/llmtrim-gateway/: Cargo.toml
crates/adapters/llmtrim-gateway/src/: lib.rs
crates/llmtrim-cli/: Cargo.toml  README.md
crates/llmtrim-cli/bench/: README.md  pricing.json  toolout.toml  toolout_adaptive.toml  toolout_aggressive.toml  toolout_auto.toml
crates/llmtrim-cli/bench/results-2026-06/: README.md  cache.json  cache__aggressive.json  cache__safe.json  cache__tuned.json  chat.json  chat__aggressive.json  chat__safe.json  cnn.json  cnn__aggressive.json  cnn__safe.json  dolly.json  dolly__aggressive.json  dolly__safe.json  glaive.json  glaive__aggressive.json  glaive__safe.json  gsm8k.json  gsm8k__aggressive.json  gsm8k__safe.json  hotpotqa.json  hotpotqa__aggressive.json  hotpotqa__safe.json  hotpotqa__tuned.json  humaneval.json  humaneval__aggressive.json  humaneval__safe.json  tl_ours.json  tl_rtk.json  toolout.json
crates/llmtrim-cli/bench/results-caveman/: README.md  results.json
crates/llmtrim-cli/bench/results-vs-headroom/: README.md  results.json
crates/llmtrim-cli/bench/scripts/: README.md  bench.py  caveman_ab.py  chart.py  download.py  fetch_pricing.py  latency.rs  requirements-vs-headroom.txt  run_all.sh  synth_readme.py  synth_toolout.py  vs_headroom.py
crates/llmtrim-cli/bench/scripts/benchkit/: __init__.py  cli.py  config.py  corpora.py  gate.py  lib.py  live.py  pricing.py  report.py  stats.py  sweep.py
crates/llmtrim-cli/bench/scripts/benchkit/competitors/: __init__.py  base.py  caveman.py  headroom.py
crates/llmtrim-cli/bench/scripts/benchkit/data/: download.py  fetch_pricing.py  synth_toolout.py
crates/llmtrim-cli/bench/scripts/benchkit/tools/: chart.py  synth_readme.py
crates/llmtrim-cli/bench/snapshots/vs-headroom/: README.md  results-noml.json
crates/llmtrim-cli/src/: autostart.rs  bench.rs  compact.rs  daemon.rs  discover.rs  doctor.rs  ensure.rs  guard.rs  lib.rs  main.rs  monitor.rs  quality.rs  serve.rs  setup.rs  statusline.rs  tracking.rs  transport.rs  tray.rs  ui.rs  update.rs  window_sub.rs  wrap.rs
crates/llmtrim-cli/src/bench/: mod.rs
crates/llmtrim-cli/src/breakdown/: app.rs  db.rs  export.rs
crates/llmtrim-cli/src/reroute/: codex.rs  mod.rs  quota.rs  sse.rs  tui.rs
crates/llmtrim-cli/tests/: quality.rs
crates/llmtrim-cli/tests/common/: mod.rs
crates/llmtrim-cli/tests/fixtures/discover/: 1781000000000005-aaaa.json
crates/llmtrim-core/: Cargo.toml  README.md
crates/llmtrim-core/data/: lmarena_text.json  model_context.json  model_reasoning.json
crates/llmtrim-core/fixtures/: compaction_prompt.txt  tool_desc_bash.txt  tool_desc_bash_compact.txt  tool_desc_workflow.txt
crates/llmtrim-core/prompts/: csv_legend.txt  jsoncrush_note.txt  ngram_glossary.txt  output_compact_code.txt  output_draft.txt  output_terse.txt  output_token_budget.txt  tools_frugal.txt  toon_legend.txt
crates/llmtrim-core/src/: cache_zone.rs  capability.rs  config.rs  gate.rs  ir.rs  lib.rs  media.rs  memo.rs  pipeline.rs  quality_gate.rs  select.rs  tokenizer.rs
crates/llmtrim-core/src/provider/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/llmtrim-core/src/stages/: cache.rs  dedup.rs  hygiene.rs  image.rs  jsoncrush.rs  mod.rs  ngram.rs  ngram_sa.rs  output.rs  retrieve.rs  serialize.rs  sizing.rs  skeleton.rs  tool_schema.rs  tools.rs
crates/llmtrim-core/src/stages/toolout/: detect.rs  diff.rs  generated.rs  grep.rs  log.rs  mod.rs  normalize.rs  plaintext.rs  signals.rs  template.rs
crates/llmtrim-core/tests/: conformance.rs  eval.rs  output.rs
crates/llmtrim-core/tests/conformance/: anthropic_agent_tool_result.json  anthropic_cache_frozen_prefix.json  openai_chat_basic.json
crates/llmtrim-core/tests/fixtures/: anthropic_events.json  openai_pretty.json  openai_prose.json  openai_users.json
crates/llmtrim-ledger/: Cargo.toml
crates/llmtrim-ledger/src/: breakdown_db.rs  dashboard.rs  lib.rs  tracking.rs
crates/llmtrim-ledger/src/snapshots/: llmtrim_ledger__breakdown_db__tests__sessions_snapshot_anchor.snap  llmtrim_ledger__dashboard__tests__snapshot_dashboard_json.snap
crates/llmtrim-tray/: .gitignore  Cargo.toml  Info.plist  README.md  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
crates/llmtrim-tray/capabilities/: main.json
crates/llmtrim-tray/icons/: icon.icns
crates/llmtrim-tray/src/: main.rs
crates/llmtrim-tray/src-ui/: card.ts  dom.ts  format.ts  main.ts  settings.ts  sparkline.ts  styles.css  tree.ts  types.ts
crates/llmtrim-tray/tools/: gen_icons.py
crates/llmtrim-tray/ui/: index.html  main.js
crates/llmtrim-uniffi/: Cargo.toml  README.md  pyproject.toml
crates/llmtrim-uniffi/examples/: compress_then_send.py  compress_then_send.rb
crates/llmtrim-uniffi/packaging/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
crates/llmtrim-uniffi/packaging/ruby/: README.md  llmtrim.gemspec
crates/llmtrim-uniffi/packaging/swift/: Package.swift  README.md
crates/llmtrim-uniffi/packaging/swift/Tests/LlmtrimTests/: CompressTests.swift
crates/llmtrim-uniffi/scripts/: build-gem.sh  build-maven.sh  build-wheel.sh  build-xcframework.sh  generate-bindings.sh
crates/llmtrim-uniffi/src/: lib.rs
scripts/: seed-dev-ledger.sh  test-ensure-sandboxes.sh
src/: autostart.rs  bench.rs  cache_zone.rs  config.rs  daemon.rs  doctor.rs  gate.rs  lib.rs  main.rs  memo.rs  monitor.rs  pipeline.rs  quality.rs  serve.rs  setup.rs  tokenizer.rs  tracking.rs  transport.rs  update.rs
tests/: eval.rs  output.rs  quality.rs
tools/: check_ci_green.sh  refresh_context.py  refresh_lmarena.py
(+29 files in other folders)
