[workspace]
resolver = "3"
members = ["crates/llmtrim-core", "crates/llmtrim-cli"]

# Shared package metadata — inherited by each member via `field.workspace = true`.
[workspace.package]
version = "0.1.7-dev"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/fkiene/llmtrim"
homepage = "https://github.com/fkiene/llmtrim"
license = "AGPL-3.0-only"

[workspace.lints.rust]
# The compression core is pure-safe Rust; keep it that way (CI denies warnings).
unsafe_code = "forbid"
# Deny here instead of `-- -D warnings` on the CLI so clippy/check/test share one cache.
warnings = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
