[workspace]
resolver = "3"
members = [
  "crates/llmtrim-core",
  "crates/llmtrim-cli",
  "crates/llmtrim-ledger",
  "crates/llmtrim-uniffi",
  "crates/llmtrim-wasm",
  "crates/llmtrim-tray",
]
# Bare `cargo build/check/test` skips the Tauri crate (it needs webkit2gtk / WKWebView
# which aren't present on Linux CI). The tray is compiled only by `cargo build -p
# llmtrim-tray` or the dedicated tray.yml CI workflow.
default-members = [
  "crates/llmtrim-core",
  "crates/llmtrim-cli",
  "crates/llmtrim-ledger",
  "crates/llmtrim-uniffi",
  "crates/llmtrim-wasm",
]

# Shared package metadata — inherited by each member via `field.workspace = true`.
[workspace.package]
version = "0.7.0-dev"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/fkiene/llmtrim"
homepage = "https://github.com/fkiene/llmtrim"
license = "MPL-2.0"

# Dependencies shared by more than one member — declared once here, pulled in with
# `<dep>.workspace = true` so a version bump is a single edit.
[workspace.dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
csv = "1.4.0"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "arbitrary_precision"] }
tiktoken-rs = "0.12.0"
toml = "1.1.2"

[workspace.lints.rust]
# The compression core is pure-safe Rust; keep it that way (CI denies warnings).
unsafe_code = "forbid"
# Deny here instead of `-- -D warnings` on the CLI so clippy/check/test share one cache.
warnings = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
