[package]
name = "llmtrim"
description = "Static, deterministic LLM prompt/payload compressor — cut input tokens 30-90% with zero extra model calls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["llm", "tokens", "compression", "openai", "anthropic"]
categories = ["command-line-utilities", "development-tools", "compression"]
# Keep the published crate lean — benchmark corpora, CI config and editor rules aren't
# needed to build or use llmtrim. bench/pricing.json is re-included: main.rs embeds it
# (include_str!) as the dashboard's pricing fallback, so the package must carry it.
exclude = ["bench/*", "!bench/pricing.json", "*.png"]

# `cargo binstall llmtrim` → prebuilt release binaries instead of a source build.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[lib]
name = "llmtrim"
path = "src/lib.rs"

[[bin]]
name = "llmtrim"
path = "src/main.rs"

[dependencies]
llmtrim-core = { path = "../llmtrim-core" }
anyhow.workspace = true
base64.workspace = true
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = { version = "7.2.2", default-features = false, features = ["custom_styling"] }
csv.workspace = true
ctrlc = "3.5.2"
dotenvy = "0.15.7"
once_cell.workspace = true
owo-colors = "4.3.0"
regex.workspace = true
rusqlite = { version = "0.39", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
statrs = "0.18.0"
tiktoken-rs.workspace = true
toml.workspace = true
unicode-width = "0.2"
ureq = "3.3.0"
wait-timeout = "0.2.1"
# Live A/B benchmarking (the `bench` command's network path).
async-openai = { version = "0.41.0", features = ["chat-completion", "byot"], optional = true }
reqwest = { version = "0.13", default-features = false, optional = true }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "signal", "time"], optional = true }
# The MITM interceptor (`serve`).
hudsucker = { version = "0.24", default-features = false, features = ["rcgen-ca", "rustls-client", "http2"], optional = true }
async-trait = { version = "0.1", optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
llm_providers = { version = "0.14", optional = true }
# Not used directly — caps the transitive `time` (via hudsucker → rcgen) below 0.3.48,
# whose new blanket impl collides with rcgen 0.14's `impl<T: Into<String>> From<T>`
# (E0119), breaking un-`--locked` `cargo install`. Drop when rcgen ships a fix.
time = { version = ">=0.3.36, <0.3.48", default-features = false, optional = true }

[target.'cfg(not(windows))'.dependencies]
auto-launch = "0.6.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[features]
default = ["intercept"]
live = ["dep:async-openai", "dep:reqwest", "dep:tokio"]
intercept = ["dep:hudsucker", "dep:tokio", "dep:async-trait", "dep:http-body-util", "dep:bytes", "dep:llm_providers", "dep:time"]

# Latency micro-benchmark — its own `main` (warm timing + attribution).
# Run: `cargo bench --bench latency [-- request.json [provider]]`.
[[bench]]
name = "latency"
path = "bench/scripts/latency.rs"
harness = false

[lints]
workspace = true
