[package]
name = "llmtrim"
description = "Static, deterministic LLM prompt/payload compressor — cut input tokens 30-90% with zero extra model calls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["llm", "mcp", "compression", "openai", "anthropic"]
categories = ["command-line-utilities", "development-tools", "compression"]
# Keep the published crate lean — benchmark corpora, CI config and editor rules aren't
# needed to build or use llmtrim. bench/pricing.json is re-included: main.rs embeds it
# (include_str!) as the dashboard's pricing fallback, so the package must carry it.
exclude = ["bench/*", "!bench/pricing.json", "*.png"]

# `cargo binstall llmtrim` → prebuilt release binaries instead of a source build.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[lib]
name = "llmtrim"
path = "src/lib.rs"

[[bin]]
name = "llmtrim"
path = "src/main.rs"

[dependencies]
# `version` is required for `cargo publish` (path alone isn't publishable) and is kept in
# lockstep with llmtrim-core by cargo-release's shared-version on every bump.
llmtrim-core = { path = "../llmtrim-core", version = "0.5.0-dev" }
# Published alongside core (see release.yml publish order). `version` is required
# for `cargo publish` and is kept in lockstep by cargo-release's shared-version.
llmtrim-ledger = { path = "../llmtrim-ledger", version = "0.5.0-dev" }
anyhow.workspace = true
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = { version = "7.2.2", default-features = false, features = ["custom_styling"] }
dotenvy = "0.15.7"
once_cell.workspace = true
owo-colors = "4.3.0"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
statrs = "0.18.0"
toml.workspace = true
unicode-width = "0.2"
ureq = "3.3.0"
wait-timeout = "0.2.1"
# Live A/B benchmarking (the `bench` command's network path).
async-openai = { version = "0.41.0", features = ["chat-completion", "byot"], optional = true }
reqwest = { version = "0.13", default-features = false, optional = true }
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
  "time",
], optional = true }
# The MITM interceptor (`serve`).
hudsucker = { version = "0.24", default-features = false, features = [
  "rcgen-ca",
  "rustls-client",
  "http2",
], optional = true }
# Upstream-proxy connector for the MITM path — tunnels HTTPS origin connections via CONNECT.
# `rustls-tls-native-roots` enables the `__rustls` internal feature, which causes ProxyConnector
# to build a tokio-rustls TlsConnector for the ORIGIN leg of tunnelled connections (the part
# that actually carries the API key). The inner connector only dials the proxy itself (http://),
# so it needs no TLS. The tokio-rustls ClientConfig inherits whatever CryptoProvider is
# installed at runtime; we call aws_lc_rs::default_provider() at startup, so origin TLS uses
# aws-lc-rs throughout — no ring is pulled in as an active provider.
hyper-http-proxy = { version = "1.1", default-features = false, features = [
  "rustls-tls-native-roots",
], optional = true }
hyper-util = { version = "0.1", default-features = false, features = [
  "client-legacy",
  "http2",
], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
llm_providers = { version = "0.14", optional = true }
# Not used directly — caps the transitive `time` (via hudsucker → rcgen) below 0.3.48,
# whose new blanket impl collides with rcgen 0.14's `impl<T: Into<String>> From<T>`
# (E0119), breaking un-`--locked` `cargo install`. Drop when rcgen ships a fix.
time = { version = ">=0.3.36, <0.3.48", default-features = false, optional = true }
# MCP server over stdio (`mcp`). rmcp is the official Model Context Protocol Rust SDK;
# `transport-io` is the stdio transport, `macros` derives each tool's JSON Schema.
rmcp = { version = "1.7", default-features = false, features = [
  "server",
  "macros",
  "transport-io",
], optional = true }
schemars = { version = "1", optional = true }
# Interactive cost-breakdown TUI (`status`/`monitor` on a TTY). crossterm is the terminal
# backend; ratatui draws the tabbed tree-tables.
ratatui = { version = "0.29", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.28", optional = true }
# Parse the existing ANSI-colored dashboard string into styled ratatui spans for the
# Overview tab (so the hero box / gauges / sparkline keep their colors).

# The protocol-level MCP test (`tests/mcp_protocol.rs`, gated on the `mcp` feature) drives
# the server through an in-memory client, which needs rmcp's `client` side. Dev-only —
# the shipped binary keeps just the server features above.
[dev-dependencies]
insta = "1"
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-io"] }

[target.'cfg(not(windows))'.dependencies]
auto-launch = "0.6.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"

[features]
# `mcp` is in `default` (like `intercept`) because the release binaries are built with
# default features only; the whole point of `llmtrim mcp` is that MCP clients can spawn the
# shipped binary, so it must carry the command. Cost is rmcp + schemars (modest next to the
# hudsucker/tokio stack intercept already pulls).
default = ["intercept", "mcp", "breakdown"]
live = ["dep:async-openai", "dep:reqwest", "dep:tokio"]
# Interactive cost-breakdown TUI. In default so the shipped binary's `status` opens it on a TTY.
breakdown = ["dep:ratatui", "dep:crossterm"]
intercept = [
  "dep:hudsucker",
  "dep:tokio",
  "dep:http-body-util",
  "dep:bytes",
  "dep:llm_providers",
  "dep:time",
  "dep:hyper-http-proxy",
  "dep:hyper-util",
]
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio"]

[lints]
workspace = true
