[package]
name = "llmtrim-core"
description = "Static, deterministic LLM prompt/payload compression engine — the zero-LLM-call transform core behind llmtrim. No network, no async."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["llm", "tokens", "compression", "openai", "anthropic"]
categories = ["compression", "text-processing", "api-bindings"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bm25 = "2.3.2"
csv = "1.4.0"
gaoya = "0.2.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "arbitrary_precision"] }
stop-words = "0.10.0"
tiktoken-rs = "0.12.0"
toml = "1.1.2"
toon-format = "0.5.0"
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-rust = "0.24.2"
# Stage C skeletonization grammars — top languages (all ABI-verified against ts 0.26).
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.3"
tree-sitter-zig = "1.1.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
whatlang = "0.18.0"

[lints]
workspace = true
