[package]
name = "llmtrim-ledger"
description = "SQLite ledger (data layer) shared by llmtrim-cli and llmtrim-tray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords = ["llm", "sqlite", "tokens", "compression", "tracking"]
categories = ["database", "development-tools"]

[dependencies]
llmtrim-core = { path = "../llmtrim-core", version = "0.5.0-dev" }
anyhow.workspace = true
chrono = "0.4.45"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = "1"
serde_json = "1"

[lints]
workspace = true
