[package]
name = "llmtrim-tray"
description = "System-tray app showing per-agent compression savings (macOS + Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "llmtrim-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
llmtrim-ledger = { path = "../llmtrim-ledger", version = "0.4.1-dev" }
# image-png: required for Image::from_bytes to decode the embedded PNG tray icon.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
anyhow = "1"
chrono = "0.4"

# Tauri macro-generated scaffolding contains `unsafe` blocks, so this crate cannot
# inherit the workspace `unsafe_code = "forbid"`. Re-declare lints here without it,
# mirroring crates/llmtrim-uniffi/Cargo.toml.
[lints.rust]
warnings = "deny"
