[package]
name = "llmtrim-tray"
description = "System-tray app showing per-agent compression savings (macOS + Windows)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "llmtrim-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
llmtrim-ledger = { path = "../llmtrim-ledger", version = "0.11.4" }
# image-png: required for Image::from_bytes to decode the embedded PNG tray icon.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
anyhow = "1"
chrono = "0.4"
# Parse the CLI's `status --json` to read the authoritative `daemon.running` flag.
# Proxy liveness is runtime state (pidfile + port probe), never stored in the ledger DB,
# so it can't be read from SQLite like the savings figures are.
serde_json.workspace = true

# Tauri decides "dev vs production" from the `custom-protocol` feature: its build
# script sets `dev = !custom_protocol`. In dev mode the webview loads `build.devUrl`
# (the Vite dev server on :43217); only with `custom-protocol` on does it serve the
# embedded `dist/` assets over the `tauri://` protocol. `cargo tauri build` would add
# this feature automatically, but every shipping path here uses plain cargo instead —
# CI (`tray.yml`), `release.yml`, the Homebrew `cargo install`, and the npm repackage —
# so it must be a DEFAULT feature or the released tray is a blank window that logs
# "could not connect to the server" (issue #149). DO NOT REMOVE from `default`.
# For UI hot-reload, build the dev binary with `--no-default-features` so it uses devUrl.
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Tauri macro-generated scaffolding contains `unsafe` blocks, so this crate cannot
# inherit the workspace `unsafe_code = "forbid"`. Re-declare lints here without it,
# mirroring crates/llmtrim-uniffi/Cargo.toml.
[lints.rust]
warnings = "deny"
