# Shared, host-agnostic logic for the proxy-wasm gateway plugins (Kong, Higress). Pure Rust
# over `llmtrim-core::rewrite_request` so it unit-tests on the host without a proxy-wasm host;
# the per-gateway crates add only the lifecycle glue. Not published.
[package]
name = "llmtrim-gateway"
description = "Shared request-compression logic for llmtrim's proxy-wasm gateway plugins (Kong, Higress)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

[dependencies]
# Default features off: gateway plugins target wasm and must drop the C toolchain
# (tree-sitter) and the 8 MB tiktoken vocab. Token counts become estimates, which is fine
# for a header/log value; the compressed body is identical.
llmtrim-core = { path = "../../llmtrim-core", default-features = false }
# Parse the host's plugin-config JSON into `Config` here (host-testable) so the wasm plugin
# crate stays thin glue.
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
